samples/_failures_safe/1761323664_98768a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74462aa1.c: In function ‘main’:
./samples/SAFE/__tmp_74462aa1.c:169:5: error: expected declaration or statement at end of input
  169 |     printf("Enter arithmetic expression: ");
      |     ^~~~~~
